# rapso

./: # AGENTS.md  .eslintrc.cjs  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  WIP_agen.md  alternative-agents.md  docker-compose.yml  package-lock.json  plan.md
.claude/: settings.local.json
.github/workflows/: dependency-guard.yml
app/: README.md  package.json  tsconfig.json
app/rapso-app/: package.json  pnpm-lock.yaml  shopify.app.toml
app/rapso-app/app/routes/: app.model.tsx  app.tsx  assets.$.tsx  customer.tsx  fit.commit.tsx  fit.dev-upload.tsx  fit.height.tsx  fit.presign.tsx  fit.save-height.tsx  fit.status.tsx  internal.model-run-callback.tsx  jobs.$id.tsx  ping.tsx  proxy.assets.$.tsx  proxy.customer.tsx  proxy.fit.commit.tsx  proxy.fit.dev-upload.tsx  proxy.fit.height.tsx  proxy.fit.save-height.tsx  proxy.jobs.$id.tsx  proxy.ping.tsx  proxy.save-height.tsx  proxy.tryon.tsx  save-height.tsx  tryon.tsx  webhooks.customers.redact.tsx  webhooks.shop.redact.tsx
app/rapso-app/app/routes/auth.login/: route.tsx
apps/shopify/: package.json  shopify.app.toml  vite.config.ts
apps/shopify/app/: root.tsx
apps/shopify/app/routes/: api.assets.$.tsx  api.jobs.$id.tsx  app.billing.tsx  app.getting-started.tsx  app.jobs.tsx  app.model.tsx  app.sizing.tsx  app.tsx  assets.$.tsx  customer.tsx  fit.commit.tsx  fit.dev-upload.tsx  fit.presign.tsx  fit.save-height.tsx  fit.status.tsx  internal.model-run-callback.tsx  ping.tsx  proxy.assets.$.tsx  proxy.fit.presign.tsx  proxy.fit.status.tsx  proxy.jobs.$id.tsx  proxy.sizing.tsx  save-height.tsx  sizing.tsx  webhooks.customers.data_request.tsx
apps/shopify/app/utils/: env.server.ts
apps/shopify/extensions/rapso-theme/: shopify.extension.toml
apps/shopify/prisma/: schema.prisma
apps/shopify/scripts/: check-dependency-allowlist.mjs
apps/shopify/security/: dependency-allowlist.json
apps/shopify/tests/: fit.commit.spec.ts  fit.height.spec.ts  fit.presign.spec.ts  save.height.spec.ts
backend/: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
backend/app/: config.py  models.py  state.py  storage.py
docs/: COMPREHENSIVE-REVIEW-2025-11-07.md  DEV.md
scripts/: check_no_store.sh  health.sh  smoketest.sh
worker/: Dockerfile  Dockerfile.gpu  README.md  main.py  pyproject.toml
worker/providers/: __init__.py  silhouette_revolve.py  triposr.py
(+12 files in other folders)
