[project]
name = "backend"
version = "0.1.0"
description = "Rapso backend - FastAPI service for uploads, presign/commit/status, asset serving"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "python-dotenv==1.0.1",
    "pydantic==2.10.2",
    "python-multipart==0.0.17",
    "boto3==1.35.71",
    "httpx==0.28.0",
    "sqlalchemy==2.0.36",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
