[project]
name = "worker"
version = "0.1.0"
description = "Rapso worker - GPU/CPU service for 3D model inference"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "httpx==0.28.0",
    # Image processing
    "pillow==11.0.0",
    "numpy>=1.26.0,<2",  # MediaPipe requires numpy<2
    # 3D mesh processing
    "trimesh==4.5.3",
    "scipy==1.14.1",
    # MediaPipe for silhouette segmentation
    "mediapipe==0.10.18",
]

[project.optional-dependencies]
gpu = [
    # PyTorch for GPU inference - install separately with CUDA support
    # uv pip install torch --index-url https://download.pytorch.org/whl/cu121
    "torch>=2.0.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
